// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GatsbyButton component match snapshot for Medium 1`] = `
<DocumentFragment>
  <button
    class="GatsbyButton-root-9 GatsbyButton-medium-8"
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;

exports[`GatsbyButton component match snapshot for Small 1`] = `
<DocumentFragment>
  <button
    class="GatsbyButton-root-4 GatsbyButton-small-5"
    type="button"
  >
    Click me!
  </button>
</DocumentFragment>
`;
